# gpTerm

./: Cargo.toml  README.md  messages.json
src/: api.rs  api_manager.rs  app.rs  chat_api.rs  logging.rs  main.rs  render.rs  request.txt  text_api.rs
