[package]
name = "gpterm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.2.5"
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
crossterm = {version = "0.25"}
serde_json = "1.0"
futures = "0.3"
serde = {version = "1",  features = ["derive"]}
reqwest = {version= "0.11", features = ["json", "blocking"]}
tui = "0.19"
tokio = { version = "1.12.0", features = ["full"] }

log = {version = "0.4"}

log4rs = {version = "1.2.0", features=[
    "file_appender",
    "rolling_file_appender",
    "compound_policy"
]}

#rand = "0.8.5" 
#clap = { version = "4.0", features = ["derive"] }

